# ActiveN

./: .gitattributes  .gitignore  .gitmodules  Aux.sv  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.sbt  build.sc  driver.cpp  flake.nix  mvcModel.cpp  send.asm.py
datagen/src/: main.rs
extras/gpu-baseline/: .gitattributes  mvc.genn
extras/gpu-baseline/mvc_CODE/: definitions.h  init.cc  runner.cc  synapseUpdate.cc
mvc_CODE/: definitionsInternal.h  neuronUpdate.cc
scripts/: build.sh  report.sh  shell_docker.sh  shell_nix.sh  test-gpu.sh  test.sh
scripts/report/: dram.sh  dram_tabular.sh  enhancement.note  enhancement.sh  log.js  power_area.sh  ppa_static.py  sum.py
scripts/tasks/: enhancement.list  enhancement.sh  enhancement.single.sh  mvc.sh  scalability.sh  scalability.single.sh
sim/: CMakeLists.txt  booksim2
sim/mvc/: conns.json  nodes.json
sim/payloads/: .gitignore  Makefile  fpu.S  linker.ld  loop-ping.S  test.S
sim/src/: aux.cpp  main.cpp  meow.cpp  meow.h
src/: main.rs
src/main/scala/: Core.scala  Main.scala  Parameters.scala
src/main/scala/koneko/: BIU.scala  Core.scala  Data.scala  Main.scala  Parameters.scala
src/main/scala/koneko/exec/: Exec.scala  FPU.scala  LSU.scala  Mul.scala  RegFile.scala  SPM.scala
src/main/scala/koneko/fetch/: Decode.scala  Fetch.scala  ICache.scala
